Fixed alignment, adjusted animation

--- a/_sass/_breakpoints/_768.sass
+++ b/_sass/_breakpoints/_768.sass
@@ -1,4 +1,7 @@
-
+ul
+	margin-top: rhythm(1)
+	+span(6 of 12 last)
+	text-align: center
 
 .headline
 	+adjust-font-size-to(42px)
